--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>ログイン画面</title>
+    <style>
+        body.bg-light {
+          background-color: #eeece4 !important;
+        }
+    </style>
     <link th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/js/main.js}"></script>
