--- a/src/main/resources/templates/reservation/edit.html
+++ b/src/main/resources/templates/reservation/edit.html
@@ -7,7 +7,7 @@
     <script th:src="@{/js/main.js}"></script>
     <title>予約変更画面</title>
 </head>
-<body class="bg-light">
+<body class="reservation-page">
 <header>
     <div th:replace="fragments/navbar :: navbar"></div>
     <!--パンくずリスト-->
