--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-4">
-                    <div class="card bg-light admin-card">
+                    <div class="card bg-white admin-card">
                         <div class="card-body text-center">
                             <h5 class="card-title">総会員数</h5>
                             <p class="card-text" th:text="${totalUsers} + '名'"></p>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card bg-light admin-card">
+                    <div class="card bg-white admin-card">
                         <div class="card-body text-center">
                             <h5 class="card-title">店舗登録数</h5>
                             <p class="card-text" th:text="${totalRestaurants} + '件'"></p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card bg-light admin-card">
+                    <div class="card bg-white admin-card">
                         <div class="card-body text-center">
                             <h5 class="card-title">総予約数</h5>
                             <p class="card-text" th:text="${totalReservations} + '件'"></p>
