--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,19 +6,17 @@ body {
     font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
-/* 左メニュー（固定サイドバー） */
+/* 左メニュー */
 .sidebar {
-    height: 100vh;
-    width: 250px;
-    position: fixed;
-    top: 187px;
-    left: 0;
-    background-color: #ffffff;
-    color: #black;
-    padding-top: 20px;
-    z-index: 1000;
+  height: 75vh;
+  width: 250px;
+  position: absolute;
+  top: 187px;
+  left: 0;
+  background-color: #ffffff;
+  color: #000;
+  padding-top: 20px;
 }
-
 .sidebar a {
     display: block;
     color: #ecf0f1;
@@ -68,8 +66,9 @@ body {
 
 /* 右メインエリア */
 .content {
-    margin-left: 230px;
+    margin-left: 250px;
     padding: 30px;
+    margin-top: 0px;
 }
 
 /* サイト管理者画面 */
@@ -116,7 +115,6 @@ body {
   min-height: 100vh;
   margin: 0;
 }
-
 
 .reservation-page h2 {
     font-size: 1.8rem;
@@ -279,4 +277,9 @@ body {
 
 .btn-cancel:hover {
   background-color: #d9534f;
+}
+
+.form-control::placeholder {
+  color: #ccc !important;
+  opacity: 1;
 }
