レイアウト修正

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -74,6 +74,10 @@
     </div>
 
 </main>
+<footer>
+    <div th:replace="fragments/fragment :: footer"></div>
+</footer>
+
 <div th:replace="fragments/fragment :: scriptsAndJs"></div>
 </body>
 </html>
