--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -114,13 +114,12 @@ body {
 }
 
 .admin-sidebar {
-     height: 100vh;
+     height: 20vh;
      width: 230px;
      position: fixed;
-     top: 120px;
+     top: 220px;
      left: 0;
-     background-color: #2c3e50;
-     color: #ecf0f1;
+     background-color: #fff;
      padding-top: 20px;
      z-index: 1000;
 }
@@ -136,8 +135,7 @@ body {
 
 
 .list-group-item {
-    background-color: #2c3e50;
-    color: #fff;
+    background-color: #fff;
     border: none;
 }
 
